# cli-wizard

./: README.md  pyproject.toml  todo.md
src/cli_wizard/: __main__.py  cli.py  config.py  gemini_interface.py  main.py  state.py  theme.py
src/cli_wizard/commands/: __init__.py  _utils.py  ask.py  command_for.py  config.py  generate.py
src/cli_wizard/core/: config_settings.py  gemini_interface.py  llm.py
src/cli_wizard/core/gemini/: exceptions.py  gemini_interface.py  models.py
src/terminal_wizard/: __sandbox.py  main.py  state.py  theme.py
src/terminal_wizard/commands/: __init__.py  ask.py  config.py  generate.py
src/terminal_wizard/core/: llm.py
tests/: conftest.py  test_cli.py  test_commands.py  test_config_settings.py  test_gemini_interface.py  test_llm.py  test_utils.py
