[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cli-wizard"
version = "0.1.0"
description = "CLI Wizard"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
    { name = "Bela" },
]
dependencies = [
    "rich>=13.0",
]

[project.scripts]
wiz = "cli_wizard.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/cli_wizard"]

[tool.pytest.ini_options]
testpaths = ["tests"]
