[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cli-wizard"
version = "0.1.0"
description = "CLI Wizard"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
    { name = "Bela" },
]
dependencies = [
    "click",
    "rich",
    "questionary",
    "google-genai",
    "litellm",
    "platformdirs",
    "pyperclip",
    "rapidfuzz",
]

[project.scripts]
wizard = "cli_wizard.main:cli"

[tool.hatch.build.targets.wheel]
packages = ["src/cli_wizard"]

[tool.pytest.ini_options]
testpaths = ["tests"]
